# Dibdog

./: .gitignore
corpus/: data_document.json
corpus/raw/: repro1.sql  repro3.sql  ri-crm-poller__AttributesDao.sql  ri-crm-poller__CustomerDao.sql  ri-customer-indexer__ExportmasterService.sql  ri-exportmaster-synchro__ExportmasterService.sql  ri-ingredient-indexer__ExportmasterService.sql  ri-order-line-indexer__ExportmasterService.sql  ri-price-discount-indexer__ExportmasterService.sql  ri-product-indexer__ExportmasterService.sql  ri-profile-indexer__ExportmasterService.sql  trim-both.sql  union-bare.sql
dbisam-dcg-project/: ANTI_STUBS.md  ARCHITECTURE.md  CONTENTS.md  CORPUS.md  FOUNDATIONS.md  LOOP.md  README.md  REFERENCES.md  STATE.md
dbisam-dcg-project/corpus/: README.md
dbisam-dcg-project/corpus/_schema/: engine_verdict.schema.json  refresh-verdicts.sh
dbisam-dcg-project/docs/: DIVERGENCES.md  functions.md  reqcodes.md
dbisam-dcg-project/grammar/: README.md  dcg.pl  function_sigs.pl  functions.pl
dbisam-dcg-project/harness/engine/: Cargo.toml  README.md  smoke.expected.txt  smoke.sh
dbisam-dcg-project/harness/engine/src/: main.rs
dbisam-dcg-project/harness/grammar/: run.sh  (+2 more)
dbisam-dcg-project/railroad/: PLAN.md  README.md  extractor.pl  grammar.ebnf  grammar.ebnf.json  grammar.ebnf.pl  index.html  renderer.js
dbisam-dcg-project/tools/: README.md  corpus-add.sh  corpus-promote-loop.sh  corpus-promote.sh  fuzz-roundtrip.pl  harvest-mrsflow-log.sh  harvest-pq.sh  harvest-ri.sh  parse-to-term.pl  pq-translate.sh  probe-functions.sh  promote-check.pl
(+519 files in other folders)
