[package]
name = "dibdog-engine-harness"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mrsflow-cli = { path = "../../../../MrsFlow/mrsflow-cli", default-features = false, features = ["exportmaster"] }
mrsflow-core = { path = "../../../../MrsFlow/mrsflow-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[[bin]]
name = "dibdog-engine-harness"
path = "src/main.rs"
